View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027306 | Open CASCADE | OCCT:Documentation | public | 2016-03-25 14:11 | 2016-04-20 15:50 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | text | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.1 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027306: Incorrect documentation for BRepOffsetAPI_NormalProjection class | ||||
Description | BRepOffsetAPI_NormalProjection.hxx::41 //! The target face is considered to be a 2D surface. The whole sentence should be deleted. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR27306 has been created by aml. SHA-1: 8b40db3cf61287ca6f73f476543dc558e94b0be2 Detailed log of new commits: Author: aml Date: Fri Mar 25 14:32:25 2016 +0300 0027306: Incorrect documentation for BRepOffsetAPI_NormalProjection class Incorrect sentence is deleted to avoid misunderstanding. |
|
Dear msv, Please check current state of the branch CR23706. |
|
Reviewed. No testing is needed. Only doxygen comments have been updated. |
|
Branch CR27306 has been deleted by kgv. SHA-1: 8b40db3cf61287ca6f73f476543dc558e94b0be2 |
occt: master 2a11138f 2016-03-25 11:32:25
Committer: bugmaster Details Diff |
0027306: Incorrect documentation for BRepOffsetAPI_NormalProjection class Incorrect sentence is deleted to avoid misunderstanding. |
Affected Issues 0027306 |
|
mod - src/BRepOffsetAPI/BRepOffsetAPI_NormalProjection.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-03-25 14:11 |
|
New Issue | |
2016-03-25 14:11 |
|
Assigned To | => msv |
2016-03-25 14:32 | git | Note Added: 0052007 | |
2016-03-25 14:33 |
|
Note Added: 0052008 | |
2016-03-25 14:33 |
|
Status | new => resolved |
2016-03-25 14:33 |
|
Steps to Reproduce Updated | |
2016-03-25 16:36 |
|
Severity | minor => text |
2016-03-25 16:37 |
|
Note Added: 0052024 | |
2016-03-25 16:37 |
|
Assigned To | msv => bugmaster |
2016-03-25 16:37 |
|
Status | resolved => reviewed |
2016-03-25 17:23 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2016-03-28 14:56 | bugmaster | Status | reviewed => tested |
2016-03-29 15:55 | bugmaster | Changeset attached | => occt master 2a11138f |
2016-03-29 15:55 | bugmaster | Status | tested => verified |
2016-03-29 15:55 | bugmaster | Resolution | open => fixed |
2016-04-17 13:27 | git | Note Added: 0052885 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |