0027306: Incorrect documentation for BRepOffsetAPI_NormalProjection class

Incorrect sentence is deleted to avoid misunderstanding.